namespace Modeler.DataModel.Relationships.Multiplicity;

public abstract class RelationshipMultiplicity
{
    
}