namespace Modeler.DataModel.Schemas;

public abstract class Schema
{
    public string Name { get; set; } = string.Empty;
}